Fixed homepage display on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -146,9 +146,6 @@ li:not(:last-child) {
 /* --------------------------------------------------
    Home Page
    -------------------------------------------------- */
-#index-content > * {
-  height: 100%;
-}
 
 #index-content > div {
   position: relative;
@@ -160,6 +157,7 @@ li:not(:last-child) {
   object-fit: cover;
   /* object-position: center; */
   width: 40%;
+  max-height: 100vh;
   flex-shrink: 4;
 }
 
@@ -192,6 +190,7 @@ li:not(:last-child) {
   width: 60ch;
   padding: 50px;
   margin-inline: 3.125rem;
+  margin-block: auto;
   border-radius: 130px;
   border: solid 2px;
 }
@@ -344,13 +343,13 @@ li:not(:last-child) {
    -------------------------------------------------- */
 .flex-container {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 
 .flex-vert {
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .space-even {
@@ -364,7 +363,7 @@ li:not(:last-child) {
 
 .full-screen {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .page-start {
